@@ -92,6 +92,27 @@ if [ "$SPARK_SSH_OPTS" = "" ]; then
   SPARK_SSH_OPTS="-o StrictHostKeyChecking=no"
 fi
 
+default_loc_port=10334
+
+function readalllocators { 
+  retVal=
+  while read loc || [[ -n "${loc}" ]]; do
+    [[ -z "$(echo $loc | grep ^[^#] | grep -v ^$ )"  ]] && continue
+    if [ -n "$(echo $loc | grep peer-discovery-port)" ]; then
+      retVal="$retVal,$(echo $loc | sed "s#\([^ ]*\).*peer-discovery-port\s*=\s*\([^ ]*\).*#\1:\2#g")"
+    else
+      retVal="$retVal,$(echo $loc | sed "s#\([^ ]*\).*#\1:$default_loc_port#g")"
+    fi
+  done < "${SPARK_CONF_DIR}/locators" 
+  echo ${retVal#","}
+}
+
+if [ -f "${SPARK_CONF_DIR}/locators" ]; then
+  LOCATOR_ARGS="-locators="$(readalllocators)
+else
+  LOCATOR_ARGS="-locators=localhost[$default_loc_port]"
+fi
+
 MEMBERS_FILE="$SPARK_HOME/work/members.txt"
 
 function execute() {
@@ -108,8 +129,14 @@ function execute() {
   if echo $"${@// /\\ }" | grep -wq "start"; then
     # Set a default locator if not already set.
     if [ -z "$(echo  $args $"${@// /\\ }" | grep '[-]locators=')" ]; then
-      if [ "${componentType}" != "locator"  ]; then
-        args="${args} -locators=\""$(hostname)"[10334]\""
+      args="${args} $LOCATOR_ARGS"
+      # inject start-locators argument if not present
+      if [[ "${componentType}" == "locator" && -z "$(echo  $args $"${@// /\\ }" | grep 'start-locator=')" ]]; then
+        port=$(echo $args | grep -woP "peer-discovery-port=.*?[^ ]" | sed 's#peer-discovery-port=##g')
+        if [ -z "$port" ]; then
+          port=$default_loc_port
+        fi
+        args="${args} -start-locator=$host:$port"
       fi
       # Set low discovery and join timeouts for quick startup when locator is local.
       if [ -z "$(echo  $args $"${@// /\\ }" | grep 'Dp2p.discoveryTimeout=')" ]; then
@@ -118,10 +145,6 @@ function execute() {
       if [ -z "$(echo  $args $"${@// /\\ }" | grep 'Dp2p.joinTimeout=')" ]; then
         args="${args} -J-Dp2p.joinTimeout=2000"
       fi
-    fi
-    # Set MaxPermSize if not already set.
-    if [ -z "$(echo  $args $"${@// /\\ }" | grep 'XX:MaxPermSize=')" -a "${componentType}" != "locator"  ]; then
-      args="${args} -J-XX:MaxPermSize=350m"
     fi
     if [ -z "$(echo  $args $"${@// /\\ }" | grep 'client-bind-address=')" -a "${componentType}" != "lead"  ]; then
       args="${args} -client-bind-address=${host}"
@@ -208,4 +231,3 @@ else
   execute "$@"
 fi
 wait
-
